tests/errors/03_duplicate_label.f
      PROGRAM DUP_LABEL
   10 CONTINUE
   10 CONTINUE
      END
